--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.2",
-    "@mui/material": "^5.6.4",
+    "@mui/material": "^5.14.13",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.1",
+    "@mui/system": "^5.14.13",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
@@ -19,7 +21,7 @@
     "react-scripts": "5.0.1",
     "recharts": "^2.1.14",
     "sass": "^1.51.0",
-    "styled-components": "^6.0.8",
+    "styled-components": "^6.0.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
